[metadata]
name = sonetel
version = 0.1.3
author = Aashish
author_email = dev.support@sonetel.com
description = A simple Python wrapper for Sonetel REST APIs.
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sonetel/sonetel-python
project_urls =
    Bug Tracker = https://github.com/Sonetel/sonetel-python/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Telecommunications Industry

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    pyjwt[crypto]

[options.packages.find]
where = src
