[metadata]
name = sonetel
version = 0.2.0
author = Aashish
author_email = dev.support@sonetel.com
description = A simple Python wrapper for Sonetel REST APIs.
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sonetel/sonetel-python
project_urls =
    Bug Tracker = https://github.com/Sonetel/sonetel-python/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Telecommunications Industry
    Topic :: Communications
    Topic :: Communications :: Telephony
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License

[options]

python_requires = >=3.6
install_requires =
    requests
    pyjwt[crypto]

[options.packages.find]
where = sonetel
